# libcube2cyl

./: .gitignore  CMakeLists.txt  Cube2Cyl.h  LICENSE  README.md  cube_to_cyl.h  main.cpp
demo/: main.c  main.cpp
demo/qdbmp/: license.txt
example/: CMakeLists.txt
example/demo_c/: CMakeLists.txt  main.c
example/demo_cpp/: CMakeLists.txt  main.cpp
lib/qdbmp/: qdbmp.h
src/: CMakeLists.txt  Cube2Cyl.hpp  cube_to_cyl.h
test_images/test_set_2/: readme
